--- a/Google-Clone/index.html
+++ b/Google-Clone/index.html
@@ -42,7 +42,7 @@
             </section>
             <section class="main-buttons">
                 <div>
-                    <button>Buscar con Google y en mi corazon, cosa hermosa</button>
+                    <button>Buscar con Google</button>
                 </div>
                 <div>
                     <button>Me siento con suerte Liz</button>
